# blackhole

./: .gitignore  README.md  SETUP.md  pyproject.toml  requirements-lock.txt
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
notebooks/simulations/: bh_base.ipynb  bh_evaporation.ipynb  bh_iradevap.ipynb  bh_irradiation.ipynb  bh_noeffects.ipynb  gpu_bh_base.ipynb  gpu_bh_iradevap.ipynb  gpu_sgr_a.ipynb  sgr_a.ipynb  wd.ipynb
notebooks/steady_state/: alpha_viscosity.ipynb  disk_structure.ipynb  disk_subplots.ipynb  model_comparison.ipynb  opacity_regimes.ipynb
notebooks/tools/: parameter_evaluation.ipynb
notebooks/visualization/: bh_base.ipynb  bh_evaporation.ipynb  bh_iradevap.ipynb  bh_irradiation.ipynb  bh_noeffects.ipynb  gpu_bh_base.ipynb  gpu_bh_iradevap.ipynb  gpu_sgr_a.ipynb  lightcurves.ipynb  sgr_a.ipynb  wd.ipynb
src/: README.md
src/blackhole/: __init__.py  constants.py  cr_solvers.py  disk_physics.py  evolution.py  irradiation.py  luminosity.py  opacity.py  parameter_evaluation.py  solvers.py  steady_state.py  viscosity.py
src/blackhole/gpu/: __init__.py  disk_physics.py  evolution.py  luminosity.py  opacity.py  perf_logger.py  simulation.py  solvers.py  viscosity.py
src/notebooks/: GPU_timedep_newopacity_sagittarius_a_alpha_2.ipynb  Outburst_graphs.ipynb  alpha-t dependence.ipynb  bh_evaporation_outburst_plots.ipynb  bh_evaporation_timedep_simulation.ipynb  bh_iradevap_outburst_plots.ipynb  bh_iradevap_timedep_simulation.ipynb  bh_irradiation_outburst_plots.ipynb  bh_irradiation_timedep_simulation.ipynb  bh_model_comparison_graphs.ipynb  bh_noeffects_outburst_plots.ipynb  bh_noeffects_timedep_simulation.ipynb  bh_outburst_plots.ipynb  bh_timedep_simulation.ipynb  diskeqs_ss_2.ipynb  diskequations_SS_bath_params.ipynb  opacity_formulae.ipynb  opacity_model_comparison.ipynb  outburst_lightcurves.ipynb  parameter_evaluation.ipynb  sgr_a_outburst_plots.ipynb  sgr_a_timedep_simulation.ipynb  steady_state_disk_structure.ipynb  steady_state_disk_subplots.ipynb  viscosity_temperature_dependence.ipynb  wd_outburst_plots.ipynb  wd_timedep_simulation.ipynb
tests/: conftest.py  test_constants.py  test_cr_solvers.py  test_cupy_dispatch.py  test_disk_physics.py  test_evolution.py  test_gpu_disk_physics.py  test_gpu_evolution.py  test_gpu_opacity.py  test_gpu_simulation.py  test_gpu_solvers.py  test_gpu_viscosity.py  test_irradiation.py  test_luminosity.py  test_opacity.py  test_parameter_evaluation.py  test_smoke.py  test_solver_performance.py  test_solvers.py  test_steady_state.py  test_viscosity.py
