[project]
name = "blackhole"
version = "0.1.0"
description = "Modelling X-ray outbursts from stellar compact objects"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy>=1.14",
    "matplotlib",
    "pandas",
]

[project.optional-dependencies]
gpu = [
    "numba",
    "numba-cuda[cu13]",
    "cupy-cuda12x",
]
dev = [
    "pytest",
    "jupyter",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "E501",  # Line too long — notebooks have long plotting lines
    "F821",  # Undefined name — variables cross cell boundaries and %run
    "F811",  # Redefined name — notebooks intentionally redefine functions across cells
    "F841",  # Unused variable — notebooks assign intermediates for inspection
    "E402",  # Import not at top — notebooks import inline
]

[tool.pytest.ini_options]
testpaths = ["tests"]
